# Got-Soup

./: .gitignore  CMakeLists.txt  Leaf.psd  README.md  build.sh  moderation-plan.md
Art/: Leaf.psd
cmake/toolchains/: mingw-w64-x86_64.cmake
scripts/: aws_release_bundle.sh  build-linux.sh  build-win.sh  genesis_hasher.py  install_got_soupd.sh  link.sh
src/app/: main.mm  main_linux.cpp  main_macos.mm  main_win.cpp
src/core/: reference_engine.cpp  reference_engine.hpp
src/core/api/: core_api.cpp  core_api.hpp
src/core/crypto/: crypto.cpp  crypto.hpp
src/core/model/: app_meta.hpp  types.hpp
src/core/p2p/: node.cpp  node.hpp
src/core/service/: alpha_service.cpp  alpha_service.hpp
src/core/storage/: store.cpp  store.hpp
src/core/transport/: anonymity_provider.cpp  anonymity_provider.hpp
src/core/util/: canonical.cpp  canonical.hpp  hash.cpp  hash.hpp
src/daemon/: main_daemon.cpp
tests/: test_alpha_core.cpp
